Make the last column statically sized to prevent buttons from shifting

--- a/src/todo-item.scss
+++ b/src/todo-item.scss
@@ -2,7 +2,7 @@
 
 .todo-item {
   display: grid;
-  grid-template-columns: repeat(30, 1fr);
+  grid-template-columns: repeat(29, 1fr) 1rem;
   gap: 0.5rem;
   font-size: 1.3rem;
   border-bottom: 2px solid var(--primary);
